correct overflow

--- a/scss/_swiper.scss
+++ b/scss/_swiper.scss
@@ -1,7 +1,7 @@
 .swiper {
     width: 70vw;
     height: 100%;
-    overflow:unset;
+    overflow-x: hidden;
 }
   
 .swiper-slide {
