--- a/scss/style.css
+++ b/scss/style.css
@@ -121,7 +121,7 @@
 .swiper {
   width: 70vw;
   height: 100%;
-  overflow: unset;
+  overflow-x: hidden;
 }
 
 .swiper-slide {
